# SQLiDemo

./: .env.example  .gitignore  .gitmodules  README.md  app.js  index.html  pyproject.toml  run.py  style.css
src/: config.py
src/api/: app.py
src/api/routes/: admin_routes.py  auth_routes.py  crack_routes.py  demo_routes.py  search_routes.py
src/auth/: auth_service.py  base.py  factory.py
src/cracker/: __init__.py  base.py  factory.py  profiles.py  wordlist.py  wordlist_cracker.py
src/database/: base.py  factory.py  sqlite_impl.py
src/hasher/: base.py  bcrypt_impl.py  factory.py
src/query_builder/: base.py  factory.py  sql_query_builder.py
src/schemas/: crack.py  search.py  user.py
static/pages/: admin.html  crack.html  dashboard.html  inspector.html  login.html  register.html  search.html
tests/: conftest.py
tests/test_api/: test_auth_routes.py  test_demo_routes.py  test_search_routes.py
tests/test_cracker/: __init__.py  test_wordlist_cracker.py
tests/test_database/: test_sqlite_impl.py
tests/test_hasher/: test_bcrypt_impl.py
tests/test_query_builder/: test_sql_query_builder.py
