[project]
name = "sqlilab"
version = "0.1.0"
description = "SQLi Lab — Interactive SQL Injection Educational Platform"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
